FIX | fix style on mobile

--- a/pages/style.module.scss
+++ b/pages/style.module.scss
@@ -46,6 +46,11 @@
     display: grid;
     grid-gap: 25px;
 
+    .center {
+      display: grid;
+      grid-gap: 25px;
+    }
+
     @include media(">desktop") {
       width: 1110px;
       height: 530px;
